# gof

./: .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  DESCRIPTION  Dockerfile  LICENSE-text.html  Makefile  NAMESPACE  README.md  README.org  authors.html  index.html  pkgdown.yml
R/: cumres.R  cumres.coxph.R  cumres.default.R  cumres.glm.R  cumres.lvmfit.R  cumres.ordreg.R  gof-package.R  plot.R  print.R  vcov.R
R-package/: DESCRIPTION  NAMESPACE  NEWS
R-package/R/: RcppExports.R  coef.R  cumres.glm.R  print.R
R-package/gof/: DESCRIPTION
R-package/gof/man/: cumres.lvmfit.Rd  plot.cumres.Rd
R-package/inst/include/: gof_RcppExports.h
R-package/man/: plot.cumres.Rd
R-package/src/: Makevars  RcppExports.cpp  rinterface.cpp
data/: surgunit.rda
examples/: crdemo.cpp  test.R  test2.R  test3.R
man/: confint.cumres.Rd  cumres.coxph.Rd  cumres.glm.Rd  cumres.lvmfit.Rd  gof-package.Rd  gofobs-package.Rd  plot.cumres.Rd
misc/: crdemo.cpp  test.R
python-package/: CMakeLists.txt  Makefile  setup.py
python-package/src/gof/: __about__.py  __init__.py  __utils__.py  get_data.py  interface.cpp
python-package/tests/: test_c.cpp
reference/: cumres.glm.html  cumres.lvmfit.html  gof-package.html  index.html  plot.cumres.html  surgunit.html
src/: Makevars  cumres.cpp  cumres.hpp  mlogit.cpp  mlogit.hpp  pava.cpp  pava.hpp  utils.cpp  utils.hpp
tests/: test_misc.cpp  test_mlogit.cpp
